fixed scaling and overlap on all devices

--- a/src/styles/partials/Pages/about.scss
+++ b/src/styles/partials/Pages/about.scss
@@ -18,9 +18,9 @@
             position: relative;
             width: 100%;
             height: 20vh;
-            margin-top: -7%;
             background: #7510f7;
             h1 {
+                margin: 0;
                 padding-top: 7%;
                 font-size: 2rem;
                 color: white;
@@ -91,9 +91,11 @@
     .aboutStyles {
         .aboutContainer {
             height: 70%;
+            img {
+                margin-top: -30%;
+            }
             .aboutHead {
                 h1 {
-                    margin-top: 7%;
                 }
             }
         }
@@ -105,14 +107,17 @@
         flex-direction: row;
         .aboutContainer {
             width: 55%;
-            height: 100%;
+            height: 98%;
+            margin-top: 1%;
             margin-left: 4%;
             img {
+                margin-top: -18%;
+                width: 20%;
                 height: auto;
             }
 
             .aboutHead {
-                margin-top: -5%;
+                margin-top: none;
                 border-radius: 3px;
                 h1 {
                     font-size: 2.5rem;
@@ -121,8 +126,8 @@
 
             .aboutText {
                 width: 100%;
-                height: 80%;
-                margin-top: -7%;
+                height: 82%;
+                margin-top: -5%;
                 margin-left: 0;
                 h2 {
                     margin-top: 10%;
@@ -134,7 +139,7 @@
         }
 
         .skillsStyles {
-            width: 45%;
+            width: 41%;
         }
     }
 }
